--- a/public/index.html
+++ b/public/index.html
@@ -83,16 +83,11 @@ function incrementBooks() {
   return count;
 }
 
-// LÓGICA DE CONCEPTOS (+4 y +1) - CORREGIDA
+// LÓGICA DE CONCEPTOS (+4 y +1)
 function addConcepts(amount) {
   let current = getLocal('concepts', 0);
   const books = getLocal('books_opened', 0);
-  
-  // FIX: Solo migrar si libros > 1 (evita bug de arranque que suma 9)
-  if (current === 0 && books > 1) {
-    current = books * 5; 
-  }
-  
+  if (current === 0 && books > 1) { current = books * 5; } // Migración
   const newVal = current + amount;
   saveLocal('concepts', newVal);
   return newVal;
@@ -123,7 +118,7 @@ function getRealisticUserCount() {
 }
 </script>
 
-<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;600;700;800&display=swap" rel="stylesheet">
 
 <style>
 /* ========================================
@@ -143,7 +138,7 @@ function getRealisticUserCount() {
 @keyframes introIn{ to{opacity:1; transform:translate(-50%,-50%) scale(1)} }
 @keyframes introHide{ to{opacity:0; visibility:hidden; transform:translate(-50%,-80%) scale(.985)} }
 
-/* Grid */
+/* --- GRID ORIGINAL --- */
 .grid{position:absolute;inset:5vh 1.5vw;display:grid;gap:1vw}
 @media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr)}}
 @media(orientation:portrait){.grid{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}}
@@ -192,43 +187,45 @@ function getRealisticUserCount() {
 body.webview #tarjetaCard { height:650px !important; }
 @keyframes cardIn { to { opacity:1; transform:scale(1); } }
 
-/* ✨ BADGE COMPACTO NIVEL DIOS (Menos Alto + Fix 4 Conceptos) */
+/* ✨ BADGE COMPACTO NIVEL DIOS (Fix Animación + Spacing) */
 #progressBadge {
   position: fixed; 
   left: 50%; 
-  transform: translateX(-50%); /* Centrado estático */
-  top: 10px; /* Más arriba */
+  top: 15px;
   z-index: 150;
-  background: rgba(20,24,38,0.88); border: 1px solid rgba(255,255,255,0.12);
-  padding: 5px 20px; /* Menos padding vertical para reducir altura */
-  border-radius: 99px; color: #dfe9ff;
+  /* Transform inicial estático para asegurar centro */
+  transform: translateX(-50%);
+  background: rgba(20,24,38,0.85); border: 1px solid rgba(255,255,255,0.12);
+  padding: 8px 24px; border-radius: 99px; color: #dfe9ff;
   backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px);
   opacity: 0; 
-  animation: badgeSlideIn 0.7s cubic-bezier(0.2, 0.8, 0.2, 1) forwards;
+  /* Animación optimizada: Mantiene el X centrado en todo momento */
+  animation: badgeSlideIn 0.8s cubic-bezier(0.2, 0.8, 0.2, 1) forwards;
   box-shadow: 0 4px 20px rgba(0,0,0,0.3); text-align: center;
-  width: max-content; max-width: 94vw; cursor: pointer; user-select: none;
+  width: max-content; max-width: 90vw; cursor: pointer; user-select: none;
   pointer-events: auto;
 }
 
 @keyframes badgeSlideIn {
-  from { opacity: 0; transform: translate(-50%, -30px); }
+  from { opacity: 0; transform: translate(-50%, -40px); }
   to   { opacity: 1; transform: translate(-50%, 0); }
 }
 
 #progressBadge .line1 {
-  display: block; font-size: 9px; text-transform: uppercase; letter-spacing: 1.2px; 
-  opacity: 0.6; margin-bottom: 0px; font-weight: 700; color: #a0aec0;
+  display: block; font-size: 10px; text-transform: uppercase; letter-spacing: 1.5px; 
+  opacity: 0.7; margin-bottom: 5px; /* MÁS AIRE AQUI */
+  font-weight: 600; color: #a0aec0;
 }
 #progressBadge .line2 {
-  display: flex; align-items: center; justify-content: center; gap: 6px; flex-wrap: wrap;
-  font-size: 13px; font-weight: 700; color: #fff; line-height: 1.2;
+  display: flex; align-items: center; justify-content: center; gap: 8px; flex-wrap: wrap;
+  font-size: 14px; font-weight: 700; color: #fff; line-height: 1.4;
 }
-#progressBadge .dot { width: 2px; height: 2px; background: rgba(255,255,255,0.4); border-radius: 50%; display: inline-block; margin: 0 2px; }
-.highlight-txt { color: #30ffe4; text-shadow: 0 0 10px rgba(48,255,228,0.25); }
+#progressBadge .dot { width: 3px; height: 3px; background: rgba(255,255,255,0.3); border-radius: 50%; display: inline-block; margin: 0 2px; }
+.highlight-txt { color: #30ffe4; text-shadow: 0 0 12px rgba(48,255,228,0.25); }
 
 /* Toast */
 #toast {
-  position: fixed; top: 85px; left: 50%; transform: translateX(-50%) translateY(-20px); z-index: 160;
+  position: fixed; top: 95px; left: 50%; transform: translateX(-50%) translateY(-20px); z-index: 160;
   background: rgba(20,24,38,0.95); border: 1px solid rgba(255,255,255,0.1);
   padding: 12px 24px; border-radius: 16px; font-size: 15px; color: #fff;
   backdrop-filter: blur(12px); font-weight: 600; opacity: 0; pointer-events: none;
@@ -263,7 +260,7 @@ body.webview #tarjetaCard { height:650px !important; }
 .num{ color:#30ffe4; font-weight:900; font-size:2.8rem; }
 
 @media (max-width: 480px) {
-  #progressBadge { padding: 5px 16px; top: 12px; }
+  #progressBadge { padding: 8px 16px; top: 12px; }
   #progressBadge .line2 { font-size: 12px; gap: 4px; }
   .grid { gap: 1vw; } 
   .cele-msg { font-size: 1.5rem; padding: 1.5rem 2rem; }
@@ -386,7 +383,7 @@ function showToast(msg, duration=3000) {
   setTimeout(() => toast.classList.remove('visible'), duration);
 }
 
-// ✨ UPDATE BADGE (Conceptos)
+// ✨ UPDATE BADGE
 function updateBadge() {
   const streak = updateStreak(); 
   const books = getLocal('books_opened', 0);
@@ -454,10 +451,10 @@ function render(){
   }
 }
 
-// LOGICA ENGAGEMENT (SUMA 4 AL REVELAR)
+// LOGICA ENGAGEMENT
 function handleBookReveal() {
   const booksCount = incrementBooks();
-  addConcepts(4); // +4 Conceptos al revelar
+  addConcepts(4); 
   updateBadge();
   fetch("https://triggui-api.vercel.app/api/increment", {cache:"no-store"}).catch(()=>{});
 
@@ -502,14 +499,14 @@ btnLibro.onclick = async() => {
 function luminance(hex) { try { const c = hex.replace("#","").match(/.{1,2}/g).map(x=>parseInt(x,16)/255); const f = v => v<=.03928 ? v/12.92 : Math.pow((v+.055)/1.055,2.4); return 0.2126*f(c[0])+0.7152*f(c[1])+0.0722*f(c[2]); } catch { return 0; } }
 function pickTextColor(bg) { try { return luminance(bg) > 0.35 ? "#000" : "#fff"; } catch { return "#fff"; } }
 
-// SHARE & TARJETA (+1 CONCEPTO AQUI)
+// SHARE & TARJETA
 btnShare.onclick = () => {
   const t = libro.tarjeta; const card = document.getElementById("tarjetaCard");
   
-  // +1 Concepto al abrir tarjeta
+  // +1 Concepto
   if (!cardOpenedThisSession) {
     addConcepts(1);
-    updateBadge(); // Refrescar UI inmediatamente
+    updateBadge(); 
     cardOpenedThisSession = true;
   }
 
@@ -555,7 +552,7 @@ function pickLibroNoRepetido(libros){
     const data=await r.json();
     libro=data.libros[pickLibroNoRepetido(data.libros)];
     render(); 
-    // INIT STREAK VISUAL (CHECK ONLY)
+    // Init Visual
     updateBadge();
     track('app_loaded', {streak:getLocal('streak',0), books:getLocal('books_opened',0)});
   }catch(e){ 
