--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@ let cardOpenedThisSession = false;
 // Tracking
 function track(event, data = {}) {
   if (typeof gtag !== 'undefined') gtag('event', event, { event_category: 'app_engagement', ...data });
+  console.log('📊', event, data);
 }
 
 // Streak
@@ -187,45 +188,51 @@ function getRealisticUserCount() {
 body.webview #tarjetaCard { height:650px !important; }
 @keyframes cardIn { to { opacity:1; transform:scale(1); } }
 
-/* ✨ BADGE COMPACTO NIVEL DIOS (Fix Animación + Spacing) */
+/* ✨ BADGE COMPACTO (ANIMACIÓN ARREGLADA POR MÁRGENES) */
 #progressBadge {
-  position: fixed; 
-  left: 50%; 
+  position: fixed;
   top: 15px;
+  /* TECNICA DE CENTRADO ABSOLUTO SIN TRANSFORM EN EL EJE X */
+  left: 0; 
+  right: 0; 
+  margin-left: auto; 
+  margin-right: auto;
+  width: fit-content;
+  max-width: 90vw;
+  
   z-index: 150;
-  /* Transform inicial estático para asegurar centro */
-  transform: translateX(-50%);
-  background: rgba(20,24,38,0.85); border: 1px solid rgba(255,255,255,0.12);
-  padding: 8px 24px; border-radius: 99px; color: #dfe9ff;
+  background: rgba(20,24,38,0.88); border: 1px solid rgba(255,255,255,0.12);
+  padding: 5px 20px; border-radius: 99px; color: #dfe9ff;
   backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px);
+  
+  /* Animación SOLO en Y y Opacidad - IMPOSIBLE QUE SE MUEVA LATERALMENTE */
   opacity: 0; 
-  /* Animación optimizada: Mantiene el X centrado en todo momento */
-  animation: badgeSlideIn 0.8s cubic-bezier(0.2, 0.8, 0.2, 1) forwards;
+  animation: badgeDrop 0.8s cubic-bezier(0.2, 0.8, 0.2, 1) forwards;
+  
   box-shadow: 0 4px 20px rgba(0,0,0,0.3); text-align: center;
-  width: max-content; max-width: 90vw; cursor: pointer; user-select: none;
+  cursor: pointer; user-select: none;
   pointer-events: auto;
 }
 
-@keyframes badgeSlideIn {
-  from { opacity: 0; transform: translate(-50%, -40px); }
-  to   { opacity: 1; transform: translate(-50%, 0); }
+@keyframes badgeDrop {
+  0% { opacity: 0; transform: translateY(-40px); }
+  100% { opacity: 1; transform: translateY(0); }
 }
 
 #progressBadge .line1 {
-  display: block; font-size: 10px; text-transform: uppercase; letter-spacing: 1.5px; 
-  opacity: 0.7; margin-bottom: 5px; /* MÁS AIRE AQUI */
-  font-weight: 600; color: #a0aec0;
+  display: block; font-size: 9px; text-transform: uppercase; letter-spacing: 1.2px; 
+  opacity: 0.6; margin-bottom: 0px; font-weight: 700; color: #a0aec0;
 }
 #progressBadge .line2 {
-  display: flex; align-items: center; justify-content: center; gap: 8px; flex-wrap: wrap;
-  font-size: 14px; font-weight: 700; color: #fff; line-height: 1.4;
+  display: flex; align-items: center; justify-content: center; gap: 6px; flex-wrap: wrap;
+  font-size: 13px; font-weight: 700; color: #fff; line-height: 1.2;
 }
-#progressBadge .dot { width: 3px; height: 3px; background: rgba(255,255,255,0.3); border-radius: 50%; display: inline-block; margin: 0 2px; }
-.highlight-txt { color: #30ffe4; text-shadow: 0 0 12px rgba(48,255,228,0.25); }
+#progressBadge .dot { width: 2px; height: 2px; background: rgba(255,255,255,0.4); border-radius: 50%; display: inline-block; margin: 0 2px; }
+.highlight-txt { color: #30ffe4; text-shadow: 0 0 10px rgba(48,255,228,0.25); }
 
 /* Toast */
 #toast {
-  position: fixed; top: 95px; left: 50%; transform: translateX(-50%) translateY(-20px); z-index: 160;
+  position: fixed; top: 85px; left: 50%; transform: translateX(-50%) translateY(-20px); z-index: 160;
   background: rgba(20,24,38,0.95); border: 1px solid rgba(255,255,255,0.1);
   padding: 12px 24px; border-radius: 16px; font-size: 15px; color: #fff;
   backdrop-filter: blur(12px); font-weight: 600; opacity: 0; pointer-events: none;
@@ -260,7 +267,7 @@ body.webview #tarjetaCard { height:650px !important; }
 .num{ color:#30ffe4; font-weight:900; font-size:2.8rem; }
 
 @media (max-width: 480px) {
-  #progressBadge { padding: 8px 16px; top: 12px; }
+  #progressBadge { padding: 5px 16px; top: 12px; }
   #progressBadge .line2 { font-size: 12px; gap: 4px; }
   .grid { gap: 1vw; } 
   .cele-msg { font-size: 1.5rem; padding: 1.5rem 2rem; }
